--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Archie Johnson <archibaldjohnson@me.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "pm2 start lib/server.js --watch --interpreter babel-node"
+    "dev": "pm2 start lib/server.js --watch --interpreter babel-node",
+    "webpack": "webpack --watch -d"
   },
   "babel": {
     "presets": [
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
